intel/bench_214/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/log.txt
bench_214/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:220:9: error: expected expression
  int (*)[8] bits;
        ^
bench_214/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main/extr_.FFmpeglibavcodecsbc.c_ff_sbc_calculate_bits_with_main.c:221:32: error: use of undeclared identifier 'bits'
  ff_sbc_calculate_bits(frame, bits);
                               ^
3 errors generated.
HLS FPGA Parse FAILED.
